--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     z-index: 999;
     font-size: 85%;
     -webkit-user-select: none;
- 
+
 }
 
 .preview:hover{
@@ -54,12 +54,25 @@ body{
     overflow-y: scroll;
 }
 
+#informationDiv{
+    margin-left: -0.5%;
+    margin-top: -1%;
+    background-color: whitesmoke;
+    z-index: 1001;
+    width: 25%;
+    top: 5.5%;
+    padding-left: 2%;
+    padding-right: 2%;
+    overflow-y: scroll;
+    position: absolute;
+}
 
-#settingsText{
+
+#settingsText, #informationText{
     font-size: 225%;
     margin-top: 0;
     margin-bottom: 9%;
-    padding-top: 10%;
+    padding-top: 0;
     text-decoration: underline;
     font-weight: bold;
     word-wrap:initial;
@@ -127,4 +140,35 @@ a{
     cursor: pointer;
     border-radius: 30px;
     transition: 0.5s;
+}
+
+#message{
+    font-size: 110%;
+    line-height: 1.3;
+}
+
+#x{
+    font-size: 140%;
+    padding-top: 3%;
+    -webkit-user-select: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    text-align: right;
+}
+
+#x:hover{
+    cursor: pointer;
+    color: red;
+    text-decoration: underline;
+}
+
+#showSettings{
+    font-size: 125%;
+    text-decoration: underline;
+    -webkit-user-select: none;
+}
+
+#showSettings:hover{
+    color: lightblue;
+    cursor: pointer;
 }
