--- a/css/styles.css
+++ b/css/styles.css
@@ -58,16 +58,14 @@ body{
     margin-top: -1%;
     background-color: whitesmoke;
     z-index: 1001;
-    width: 20%;
+    width: 5%;
     top: 5.5%;
-    padding-left: 2%;
-    padding-right: 2%;
-    overflow-y: scroll;
-    height: 300px;
+    padding-bottom: 0;
+
+  
     border: 2px solid black;
     position: absolute;
-    border-top-left-radius: 40px;
-    scrollbar-width: thin;
+
     display: none;
 }
 
@@ -76,7 +74,7 @@ body{
     font-size: 175%;
     margin-top: 0;
     margin-bottom: 9%;
-    padding-top: 0;
+    padding-top: 9%;
     text-decoration: underline;
     font-weight: bold;
     word-wrap:initial;
@@ -153,6 +151,7 @@ a{
 #message{
     font-size: 110%;
     line-height: 1.3;
+    padding-bottom: 4%;
 }
 
 #x{
@@ -187,6 +186,45 @@ a{
 
 #tree{
     padding-bottom: 1000%;
+    margin-top: 5%;
 }
 
+#title{
+    position: absolute;
+    font-size: 500%;
+    left: 100%;
+}
+
+#type{
+    padding-top: 2%;
+    font-size: 150%;
+}
+
+#bold{
+    color: #ffa3eb;
+}
+
+#change{
+    font-size: 125%;
+    color: black;
+    text-align: center;
+    background-color: #9fd1fc;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    -webkit-user-select: none;
+    transition: 0.5s;
+    margin-bottom: 10%;
+}
+
+#change:hover{
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+#floatingImage{
+    width: 100%;
+}
 /*small change*/
