added gradient bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -352,3 +352,12 @@ a{
     line-height: 1.5;
     margin-right: 5%;
 }
+
+#rainbowGradient{
+    height: 15px;
+    background-image: linear-gradient(90deg, black, white);
+    width: 130%;
+    margin-left: -15%;
+    position: sticky;
+    top: 0;
+}
